--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   fish_redux: ^0.3.4
+  dio: ^3.0.9    #网络请求框架
+  json_annotation: ^2.4.0 # json序列化和反序列化用的
 
 dev_dependencies:
   flutter_test:
