--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   fish_redux: ^0.3.4
   dio: ^3.0.9    #网络请求框架
   json_annotation: ^2.4.0 # json序列化和反序列化用的
+  oktoast: ^2.3.2
 
 dev_dependencies:
   flutter_test:
